# fapi_dbauth

./: .gitignore  pyproject.toml
fapi_dbauth/: main.py
fapi_dbauth/database/: connection.py
fapi_dbauth/models/: events.py  users.py
fapi_dbauth/routes/: events.py  users.py
