[tool.poetry]
name = "fapi-dbauth"
version = "0.1.0"
description = ""
authors = ["Rex6961 <aon777ar@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.1"


[tool.poetry.group.db.dependencies]
sqlmodel = "^0.0.21"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
